--- a/fe/start.html
+++ b/fe/start.html
@@ -39,7 +39,7 @@
     <button class="startBtn" onclick="goNext()">소개팅 받으러 가기</button>
     <script>
       function goNext() {
-        window.location.href = "aaa.html";
+        window.location.href = "./inforeg/inforeg1/inforeg1.html";
       }
     </script>
   </body>
