리팩토링최종

--- a/fe/Selection/Selection.html
+++ b/fe/Selection/Selection.html
@@ -36,7 +36,7 @@
     </div>
 
     <!-- 공용 로직 -->
-    <script src="../infomain/infomain.js"></script>
+    <script src="../infomain/infocal.js"></script>
     <!-- 페이지 로직 -->
     <script src="Selection.js"></script>
   </body>
