--- a/fe/inforeg/inforeg3/inforeg3.html
+++ b/fe/inforeg/inforeg3/inforeg3.html
@@ -43,7 +43,7 @@
   </div>
 
   <!-- 공용 로직 -->
-  <script src="../../infomain/infomain.js"></script>
+  <script src="../../infomain/infocal.js"></script>
   <!-- 페이지 로직 -->
   <script src="./inforeg3.js"></script>
 </body>
