설정 버튼 생성, json 파일 자동 저장, json 파일 입력, 쿨타임 기능 추가

--- a/main0916.html
+++ b/main0916.html
@@ -161,7 +161,7 @@
       <h3 id="contactTitle">매칭 확정</h3>
       <div class="row"><div class="label">이름</div><div class="val" id="mName">-</div></div>
       <div class="row"><div class="label">전화번호</div><div class="val" id="mPhone"> </div></div>
-      <div class="row"><div class="label">인스타그램</div><div class="val" id="mIg"> </div></div>
+      <div class="row"><div class="label">인스타그램.</div><div class="val" id="mIg"> </div></div>
       <div class="actions">
         <button id="btnEndModal" style="background:#111827;border-color:#111827;">종료</button>
       </div>
