씨발니미 git commit -m 씨발니미

--- a/fe/inforeg/inforeg2/inforeg2.html
+++ b/fe/inforeg/inforeg2/inforeg2.html
@@ -25,7 +25,7 @@
       <select name="region" id="region" required>
         <option value="">시/도를 선택해주세요.</option>
       </select>
-      <select name="subregion" id="subregion">
+      <select name="selectedCity" id="selectedCity">
         <option value="">군/구를 선택해주세요.</option>
       </select>
 
@@ -44,7 +44,7 @@
     </form>
   </div>
 
-  <!-- 공용 데이터 -->
+  <!-- 공용 데이터 씨발아 -->
   <script src="../../infomain/infolist.js"></script>
   <!-- 페이지 로직 -->
   <script src="./inforeg2.js"></script>
