개샹것니미

--- a/fe/inforeg/inforeg2/inforeg2.html
+++ b/fe/inforeg/inforeg2/inforeg2.html
@@ -20,12 +20,12 @@
       <label>취미 (최대 5개)</label>
       <div id="hobbyChecks" class="hobby-grid"></div>
 
-      <!-- 지역 -->
+      <!-- 지역 수정 씨발 -->
       <label>지역</label>
       <select name="region" id="region" required>
         <option value="">시/도를 선택해주세요.</option>
       </select>
-      <select name="selectedCity" id="selectedCity">
+      <select name="subregion" id="subregion">
         <option value="">군/구를 선택해주세요.</option>
       </select>
 
