finforeg3 수정 완료

--- a/fe/Selection/Selection.html
+++ b/fe/Selection/Selection.html
@@ -38,6 +38,6 @@
     <!-- 공용 로직 -->
     <script src="../infomain/infocal.js"></script>
     <!-- 페이지 로직 -->
-    <script src="Selection.js"></script>
+    <script src="./Selection.js"></script>
   </body>
 </html>
