MBTI 몰아넣기 추가

--- a/fe/inforeg/inforeg2/inforeg2.html
+++ b/fe/inforeg/inforeg2/inforeg2.html
@@ -14,8 +14,10 @@
     <form id="formStep2">
       <!-- MBTI -->
       <label>MBTI</label>
-      <input type="text" name="mbti" placeholder="MBTI를 입력해주세요." required />
-
+      <div class="mbti-inputs">
+        <input type="text" name="mbti1" maxlength="4" placeholder="예: ENFP" required />
+      </div>
+      
       <!-- 취미 -->
       <label>취미 (최대 5개)</label>
       <div id="hobbyChecks" class="hobby-grid"></div>
@@ -31,7 +33,7 @@
 
       <!-- 전화번호 -->
       <label>전화번호</label>
-      <input type="text" name="phone" placeholder="010-0000-0000" />
+      <input type="text" name="phone" placeholder="010-0000-0000" maxlength="13" />
 
       <!-- 인스타그램 -->
       <label>인스타그램</label>
