전화번호 하이픈 추가했음

--- a/fe/inforeg/inforeg2/inforeg2.html
+++ b/fe/inforeg/inforeg2/inforeg2.html
@@ -15,7 +15,7 @@
       <!-- MBTI -->
       <label>MBTI</label>
       <div class="mbti-inputs">
-        <input type="text" name="mbti" maxlength="4" placeholder="MBTI를 입력하세요" required />
+        <input type="text" name="mbti" maxlength="4" placeholder="MBTI를 입력하세요!" required />
       </div>
       
       <!-- 취미 -->
@@ -33,7 +33,7 @@
 
       <!-- 전화번호 -->
       <label>전화번호</label>
-      <input type="text" name="phone" placeholder="010-0000-0000" maxlength="11" />
+      <input type="text" name="phone" placeholder="010-0000-0000" maxlength="13" />
 
       <!-- 인스타그램 -->
       <label>인스타그램</label>
