수정했어요

--- a/fe/inforeg/inforeg1/inforeg1.html
+++ b/fe/inforeg/inforeg1/inforeg1.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="./inforeg1.css">
 </head>
 <body>
-  <h1>정보 입력 (1단계)</h1>
+  <div class="container">
+    <h1>참가자 등록하기</h1>
+    <p class="subtitle">참가자 등록을 위해 정보를 입력해주세요</p>
   <form id="formStep1">
     <label>성별</label>
     <select name="gender" required>
@@ -34,6 +36,9 @@
     </div>
   </form>
 
+
+  </div>
+  
   <!-- 공용 데이터 배열 -->
   <script src="../../infomain/infolist.js"></script>
   <!-- 1단계 페이지 JS -->
