막페이지수정

--- a/fe/SelectionResult/SelectionResult.html
+++ b/fe/SelectionResult/SelectionResult.html
@@ -18,7 +18,7 @@
       <h2 id="name">이정민</h2>
       <p id="phone">010-0000-0000</p>
       <p class="sns">
-        <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="instagram" class="sns-icon">
+        <img src="./instagram.png" alt="instagram" class="sns-icon">
         <span id="instagram">@dlts_min</span>
       </p>
     </div>
