--- a/fe/start.html
+++ b/fe/start.html
@@ -15,8 +15,8 @@
         gap: 3rem;
       }
       .startLogo {
-        width: 300px;
-        height: 300px;
+       height: auto;
+       width: 600px;
         z-index: 1;
       }
       .startBtn {
@@ -75,7 +75,7 @@
       브라우저가 동영상을 지원하지 않습니다.
     </video>
 
-    <img class="startLogo" src="./소개팅대작전_LOGO.png" alt="소개팅 대작전 로고" />
+    <img class="startLogo" src="./res/logo1.png" alt="소개팅 대작전 로고" />
     <button class="startBtn" onclick="goNext()">소개팅 받으러 가기</button>
 
     <!-- ▼ 좌측 하단 설정 버튼 -->
