Revert "feat:팝업추가"

--- a/fe/Selection/Selection.html
+++ b/fe/Selection/Selection.html
@@ -26,16 +26,11 @@
       <div class="modal">
         <div class="modal-content">
           <h3>소개팅 상대로 선택하시겠어요?</h3>
-
-          <p>
-            한번 선택한 상대는 돌이킬 수 없으며, 소개팅 참여 기회는 한번
-            뿐이에요!
-          </p>
-
+          <span>한번 선택한 상대는 돌이킬 수 없으며, 소개팅 참여 기회는 한번 뿐이에요!</span>
         </div>
         <div class="actions">
-          <button class="btn confirm" id="okBtn">확인</button>
           <button class="btn cancel" id="cancelBtn">취소</button>
+          <button class="btn confirm" id="okBtn">확인</button>
         </div>
       </div>
     </div>
